[B]Version v1.0.2[/B]
- Fixed DesiRulez.net issue
- Incorporated Movie25.cm changes

[B]Version v1.0.1[/B]
- Fixed www.mediaplaybox.com links

[B]Version v1.0.0[/B]
- Released

[B]Version v0.0.10[/B]
- Fixed DesiRulez Source links

[B]Version v0.0.9[/B]
- Fixed constants file import errors

[B]Version v0.0.8[/B]
- Moved all modes to Constants File

[B]Version v0.0.7[/B]
- Updated all icons to reflect the updated theme
- Desi TV Shows performance improvements
- UI Enhancements
- Watch History Issue fixed
