@@ -8,6 +8,7 @@
 		<import addon="script.module.urlresolver"  version="2.6.0"/>
 		<import addon="script.module.t0mm0.common" version="1.1.0"/>
 		<import addon="script.module.metahandler"  version="1.0.2"/>
+        <import addon="script.module.parsedom" version="2.5.2"/>
 		<import addon="script.module.beautifulsoup"/>
     </requires>
     <extension point="xbmc.python.pluginsource"
